@@ -1,3 +1,5 @@
+* Allow to show plain text in password field
+
 Version 4.2.0 - 2016-11-28
 * Bug fixes (see mercurial logs for details)
 * Add PYSON Widget
